# oct25_bde_holiday_itinerary

./: .env  .env.api  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  architecture.md  data_import.md  data_structure.md  docker-compose.airflow.yaml  docker-compose.dev.yaml  docker-compose.yaml  docker-compose.yml  presentation.qmd  pyproject.toml  pytest.ini  run_api.py
.github/workflows/: development.yaml  python-app.yml
airflow/dags/: data_download_trigger.py
docs/: backend-architecture.md  cities-roads-dataset.md  cities_roads_dataset.md  data-import.md  data-structure.md  data_import.md  data_structure.md  development.md  frontend-architecture.md  production.md
example_data/: cities_roadto.cypher
init/: 10_create_gds_projection.cypher  import_script.sh
notebooks/: cities_with_roads.py  city_coverage.py  poi_coverage.py
reports/: presentation.qmd
src/backend/dataset_import/: __init__.py  neo4j_load.py  pipeline.py  status_handler.py
src/backend/neo4j_api/: cleanup_import.py  data_upload_etl.py  datatourisme_handler.py  import_data.py
src/backend/neo4j_api/routes/: data_update.py
src/backend/neo4j_driver/: base.py
src/backend/transformation/: __init__.py  datatourisme.py  french_cities.py
src/data/: create_cities_roads_dataset.md  import_all.cypher  import_cities_and_roads.cypher  import_poi.cypher  import_to_neo4j.txt  make_dataset.py
src/frontend/ui/: session_states.py
src/frontend/ui/handlers/: add_poi.py
src/frontend/ui/widgets/: controls.py  pois_overview.py
src/logger/: __init__.py
src/neo4j-api/neo4j_api/: driver.py
src/neo4j_api/: api.py  cleanup_import.py  data_upload_etl.py  datatourisme_handler.py  driver.py  import_data.py  main.py  status_handler.py
src/neo4j_api/routes/: city.py  data_update.py  dijkstra.py  distance.py  distances.py  poi.py  travel.py  tsp.py
src/neo4j_driver/: city.py  city_poi.py  driver.py  neo4j_driver.py  poi.py  tsp.py
src/scripts/: init-db.sh  post-init  transform_datatourisme.py
src/ui/: __init__.py  app.py  config.py  grid.py  handler.py  layout.py  poi.py  session_states.py  ui.py  utils.py
src/ui/handlers/: __init__.py  add_poi.py  delete_poi.py  get_request.py  itinerary.py
src/ui/widgets/: __init__.py  controls.py  map.py  poi_overview.py  pois_overview.py  route.py
tests/data/bulk/: import-script.sh
tests/neo4j_api_tests/: conftest.py  dijkstra_test.py  poi_test.py  tsp_test.py
tests/neo4j_driver_tests/: conftest.py  distance_test.py  neo4j_driver_test.py
tests/neo4j_driver_tests/data/: paris.csv
