[tool.poetry]
name = "oct25-bde-holiday-itinerary"
version = "0.1.0"
description = "Simple Tool to plan holiday routes in france."
authors = [
    "Adam Stibal <adam.stibal@gmail.com>",
    "Max Düssler <max.duessler@posteo.net>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13.0 <3.14"

[tool.poetry.group.dev.dependencies]
pre-commit = { version = "4.2.0" }
black = { version = "25.11.0" }
isort = { version = "7.0.0" }
flake8 = { version = "7.3.0" }
mypy = { version = "1.18.2" }

[tool.poetry.group.neo4j_api.dependencies]
neo4j = { version = "6.0.3" }

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
known_first_party = "poetry"

[tool.black]
line_length = 120

[tool.flake8]
max-line-length = 120
max-doc-length = 120

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
